--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,9 @@ DATABASE_URL=
 DB_NAME=medusa-v2
 POSTGRES_URL=
 MEDUSA_BASE_SERVER_URL=
+S3_FILE_URL=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_REGION=
+S3_BUCKET=
+S3_ENDPOINT=
