fix: update imports and formatting in separator and tooltip components
chore: add @tiptap/starter-kit dependency and update related packages

refactor: change module and moduleResolution settings in tsconfig

style: update link-popover import path

fix: update package-lock and yarn.lock with new @tiptap extensions

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tiptap/extension-text-align": "^2.14.0",
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "awilix": "^8.0.1",
     "pg": "^8.13.0"
   },
