--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-bold": "^2.14.0",
+    "@tiptap/extension-heading": "^2.14.0",
+    "@tiptap/extension-italic": "^2.14.0",
     "@tiptap/extension-link": "^2.14.0",
-    "@tiptap/extension-task-item": "^2.14.0",
-    "@tiptap/extension-task-list": "^2.14.0",
+    "@tiptap/extension-list-item": "^2.14.0",
+    "@tiptap/extension-subscript": "^2.14.0",
+    "@tiptap/extension-superscript": "^2.14.0",
     "@tiptap/extension-text-align": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
