--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,6 +1,9 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "extends": ["ultracite"],
+  "files": {
+    "includes": ["!src/components/ui/**", "!src/lib/**", "!src/hooks/**"]
+  },
   "linter": {
     "rules": {
       "nursery": {
